# Employee_management

./: .clangd  .gitignore  CMakeLists.txt  Makefile  Prepa.c  README.md  all.h  employee.c  hack.sh  main.c  utils.c
src/: all.h  disk.c  employee.c  graphx.c  gui.c  main.c  nuklear_sdl_renderer.h  search.c  shell.c  sqlite.c  table.c  utils.c
state/: record.db
